# algorithms

./: CMakeLists.txt  README.md
scripts/linux/: build.sh  test.sh
scripts/windows/: build.bat  test.bat
src/: CMakeLists.txt
src/searching/: CMakeLists.txt  SearchingAlgorithms.cpp
src/searching/include/: SearchingAlgorithms.h
src/sorting/: CMakeLists.txt  SortingAlgorithms.cpp
src/sorting/include/: SortingAlgorithms.h
src/timing/: CMakeLists.txt  Timing.cpp
src/timing/include/: Timing.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/old_test/: CMakeLists.txt  main.cpp
test/unit/searching/: CMakeLists.txt  SearchingAlgoritmsTest.cpp
test/unit/sorting/: CMakeLists.txt  SortingAlgoritmsTest.cpp
